--- a/BMIWebUI/BMIWebUI/BMIWebUI.csproj
+++ b/BMIWebUI/BMIWebUI/BMIWebUI.csproj
@@ -171,8 +171,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DocumentBlob.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DataStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -212,6 +214,11 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="App_Data\NBAviationENG.pdf" />
+    <Content Include="App_Data\NBGoodHealthDecSPA.pdf" />
+    <Content Include="App_Data\NBLIEndorsENG.pdf" />
+    <Content Include="App_Data\NBNonSmokerDecENGSPA.pdf" />
+    <Content Include="App_Data\documents.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -260,9 +267,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Documents\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
