--- a/BMIWebUI/BMIWebUI/Web.config
+++ b/BMIWebUI/BMIWebUI/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DocuSignApiBaseUrl" value="http://localhost:50473/"/>
+    <add key="SignInPlaceReturnUrl" value="http://localhost:58770/SignInPlace"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
