--- a/BMIWebUI/BMIWebUI/Web.config
+++ b/BMIWebUI/BMIWebUI/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DocuSignApiBaseUrl" value="http://localhost:50473/"/>
-    <add key="SignInPlaceReturnUrl" value="http://localhost:58770/SignInPlace"/>
+    <add key="DocuSignApiBaseUrl" value="http://localhost:50473" />
+    <add key="SiteBaseUrl" value="http://localhost:58770" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -43,7 +43,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
